Option to save configuration

--- a/ExampleConfig.ipynb
+++ b/ExampleConfig.ipynb
@@ -2,7 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'plotice': True, 'maindir': '/home/users/me'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for the notebook and as a script\n",
+    "from config_options import write_config\n",
+    "\n",
+    "# make config\n",
+    "config = {'maindir': '/home/users/me', 'plotice': True}\n",
+    "\n",
+    "# save configuration if desired\n",
+    "write_config(config, 'ExampleConfig.csh')\n",
+    "#!cat ExampleConfig.csh\n",
+    "print config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -16,9 +44,7 @@
     }
    ],
    "source": [
-    "config = {'maindir': '/home/users/me', 'plotice': True}\n",
-    "\n",
-    "# code below the same in all scripts\n",
+    "# load in global options and override local values (if desired)\n",
     "globalconfiguration = 'global_config_example.csh'\n",
     "from config_options import process_config\n",
     "config.update(process_config(globalconfiguration))\n",
