--- a/ExampleConfig.ipynb
+++ b/ExampleConfig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -16,16 +16,23 @@
     }
    ],
    "source": [
-    "# for the notebook and as a script\n",
-    "from config_options import write_config\n",
-    "\n",
     "# make config\n",
     "config = {'maindir': '/home/users/me', 'plotice': True}\n",
-    "\n",
-    "# save configuration if desired\n",
-    "write_config(config, 'ExampleConfig.csh')\n",
-    "#!cat ExampleConfig.csh\n",
     "print config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# save configuration if desired\n",
+    "from config_options import write_config\n",
+    "write_config(config, 'ExampleConfig.csh')\n",
+    "#!cat ExampleConfig.csh"
    ]
   },
   {
@@ -39,15 +46,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plotice': False, 'maindir': '\"/\"'}\n"
+      "Running from ipython: using local config (no change made)\n",
+      "{'plotice': True, 'maindir': '/home/users/me'}\n"
      ]
     }
    ],
    "source": [
-    "# load in global options and override local values (if desired)\n",
-    "globalconfiguration = 'global_config_example.csh'\n",
-    "from config_options import process_config\n",
-    "config.update(process_config(globalconfiguration))\n",
+    "from config_options import update_config_with_globals\n",
+    "config = update_config_with_globals(config)\n",
     "\n",
     "print config"
    ]
